--- a/soline2.css
+++ b/soline2.css
@@ -35,14 +35,7 @@ ul {
 p{
   text-align: center;
   
-}
- .ex1 img{
-  width: 100x;
-  height: 500px;
-  border: 10px solid transparent;
-  padding: 0px;
-  position: inherit;
-  margin: 0px;
+
 
 
 }
@@ -51,7 +44,8 @@ p{
     width: 1199px;
     height: 200px;
     border: 10px solid transparent;
-    padding:
+    padding:0
+    margin:0
 }
 
 body{
